# sortify

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  logger.rs  main.rs  services.rs  spotify.rs
src/ui/: mod.rs  utils.rs
src/ui/track/: mod.rs  placeholder.rs
