[package]
name = "sortify"
version = "1.0.2"
edition = "2021"
authors = ["Francisco Cunha <francisccdn@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A command line application to organize Spotify playlists"
readme = "README.md"
homepage = "https://github.com/franciscunha/sortify/tree/main"
repository = "https://github.com/franciscunha/sortify/tree/main"
keywords = ["music", "spotify", "playlists", "organize", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clearscreen = "3.0.0"
flexi_logger = "0.29.2"
image = "=0.24.6"
log = "0.4.22"
rascii_art = "=0.4.5"
rodio = "0.19.0"
rspotify = { version = "0.13.2", default-features = false, features = ["client-ureq", "ureq-rustls-tls", "cli", "env-file"] }
terminal_size = "0.3.0"
text_io = "0.1.12"
ureq = "2.10.0"
yansi = "1.0.1"
